# unicode-properties

./: Cargo.toml
scripts/: icu_datagen.cmd
src/: lib.rs
src/icu_tables/: mod.rs  version.rs
src/icu_tables/emoji_data/: any.rs  mod.rs
src/icu_tables/emoji_data/props/: mod.rs
src/icu_tables/general_category_data/: any.rs  mod.rs
src/icu_tables/general_category_data/props/: mod.rs
tests/: general_category.rs
