[package]
name = "unicode-properties"
version = "0.1.0"
authors = ["Charles Lew <crlf0710@gmail.com>"]
edition = "2021"
homepage = "https://github.com/unicode-rs/unicode-properties"
repository = "https://github.com/unicode-rs/unicode-properties"
documentation = "https://docs.rs/unicode-properties"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode"]
readme = "README.md"
description = """
Query character Unicode properties according to
UAX #44 and UTR #51.
"""
exclude = [ "target/*", "Cargo.lock" ]

[features]
general-category = []
emoji = []
icu = ["icu_properties", "icu_provider", "icu_collections", "zerovec", "litemap", "once_cell"]
default = ["general-category", "emoji", "icu"]

[dependencies]
icu_collections = { version = "1.0.0", optional = true }
icu_properties = {version = "1.0.0", optional = true}
icu_provider = { version = "1.0.1", optional = true }
litemap = { version = "0.6.0", optional = true }
once_cell = { version = "1.15.0", optional = true }
zerovec = { version = "0.9.0", optional = true }
